# pelican-framework

./: Cargo.toml  LICENSE  README-CN.md  README.en.md  README.md
configs/: pipeline_config
examples/: basic.rs  benchmark.rs  config_example.rs  minimal.rs  network.rs  performance.rs  secure_pipeline.rs
src/: lib.rs  main.rs  pipeline.rs
src/config/: mod.rs
src/metrics/: advanced.rs  mod.rs
src/processors/: mod.rs  packet_processor.rs  security_processor.rs
src/ratelimit/: mod.rs
src/security/: mod.rs
src/sinks/: advanced_sinks.rs  mod.rs  security_sink.rs
src/sources/: mod.rs  packet_source.rs
